# wanderbot_ws

devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: wanderbot.pc
devel/share/roseus/ros/wanderbot/: manifest.l
devel/share/wanderbot/cmake/: wanderbot-msg-paths.cmake  wanderbotConfig.cmake
src/wanderbot/: CMakeLists.txt  package.xml
src/wanderbot/scripts/: range_ahead.py  redlight_greenlight.py  wander.py
