<?xml version="1.0"?>
<package format="2">
  <name>wanderbot</name>
  <version>0.0.0</version>
  <description>The wanderbot package</description>

  <maintainer email="mersf123@gmail.com">rsf</maintainer>

  <license>BSD</license>

  <author email="mersf123@gmail.com">rsf</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
